# Invisible-Places

./: .gitignore  AGENT.md  CMakeLists.txt  CMakePresets.json  LOD_GOAL.md  PDR.md  README.md  code_plan.md  project_description.md  vcpkg.json
cmake/: Info.plist.in  InvisiblePlacesBuildConfig.hpp.in
docs/: CURRENT_STATE.md  GOAL.md  LOD_Integration.md  RipplesTuning_GOAL.md  WaterFeatures_GOAL.md  WaterFlowPathAnalysis_GOAL.md  adaptive_lod_suggested_revisions.md  bootstrap_setup.md  debugging.md  point_cloud_adaptive_lod_fast_beauty.md  point_cloud_painted_neighbour_renderer.md  ripples_tuning.md  water_features.md  water_features_redesign_v2.md  water_flow_path_analysis_lanes.md
docs/lod_goal_plans/: lod_goal_index.md  lod_goal_stage01.md  lod_goal_stage02.md  lod_goal_stage03.md  lod_goal_stage04.md  lod_goal_stage05.md  lod_goal_stage06.md  lod_goal_stage07.md  lod_goal_stage08.md  lod_goal_stage09.md  lod_goal_stage10.md  lod_goal_stage11.md
docs/logs/: code_review_f1_f7_original_audit.md  fixbugs_f1_f7_completion_log.md  lod_goal_progress.md  ripples_tuning_goal_progress.md  water_features_goal_progress.md  water_features_v2_acceptance_log.md  water_flow_path_analysis_goal_progress.md
shaders/: edl_postprocess.frag  gsplat_accumulation.frag  gsplat_accumulation.vert  gsplat_composite.frag  gsplat_composite.vert  gsplat_high_quality.frag  gsplat_high_quality.vert  pointcloud_accumulation.frag  pointcloud_caustics.glsl  pointcloud_colormaps.glsl  pointcloud_constant_simple.vert  pointcloud_constant_simple_accumulation.frag  pointcloud_draw_item_compact.comp  pointcloud_draw_item_compact_metadata.comp  pointcloud_export_depth.frag  pointcloud_exr_accumulation.frag  pointcloud_exr_composite.frag  pointcloud_exr_constant_simple_accumulation.frag  pointcloud_fast_basic.frag  pointcloud_fast_basic.vert  pointcloud_fast_basic_depth.frag  pointcloud_indirect_command.comp  pointcloud_opaque_hard_disc.frag  pointcloud_preview.frag  pointcloud_preview.vert  pointcloud_raycast_accumulate.comp  pointcloud_raycast_clear.comp  pointcloud_raycast_composite.comp  pointcloud_sparse_ripple.glsl  pointcloud_stylisation.glsl  pointcloud_surfel.vert  pointcloud_surfel_accumulation.frag  pointcloud_surfel_constant_simple.vert  pointcloud_surfel_constant_simple_accumulation.frag  pointcloud_surfel_export_depth.frag  pointcloud_surfel_exr_accumulation.frag  pointcloud_surfel_exr_constant_simple_accumulation.frag  pointcloud_surfel_opaque_hard_disc.frag  pointcloud_surfel_preview.frag
src/: main.cpp
src/app/: Application.cpp  Application.hpp  PointVisualSelection.cpp  PointVisualSelection.hpp  WaterPathDiagnostics.cpp  WaterPathDiagnostics.hpp
src/camera/: AnimationPath.cpp  AnimationPath.hpp  CameraPath.cpp  CameraPath.hpp  CameraShot.hpp  CameraState.hpp  OrbitCamera.cpp  OrbitCamera.hpp
src/io/: AssetDiscovery.cpp  AssetDiscovery.hpp  GaussianSplatData.cpp  GaussianSplatData.hpp  PlyHeader.cpp  PlyHeader.hpp  PointCloudData.cpp  PointCloudData.hpp  TransformMatrix.cpp  TransformMatrix.hpp
src/motion/: MotionProfile.hpp
src/output/: ExrWriter.cpp  ExrWriter.hpp  EyeDomeLighting.cpp  EyeDomeLighting.hpp  HoudiniCameraExport.cpp  HoudiniCameraExport.hpp  OfflinePointRenderer.cpp  OfflinePointRenderer.hpp  RenderPreset.cpp  RenderPreset.hpp  VideoWriter.cpp  VideoWriter.hpp
src/platform/: MacWindowingRuntime.cpp  MacWindowingRuntime.hpp  MacWindowingRuntime.mm  VulkanRuntimeConfig.cpp  VulkanRuntimeConfig.hpp  Window.cpp  Window.hpp  WindowBootstrapView.cpp  WindowBootstrapView.hpp  WindowBootstrapView.mm  WindowTitle.cpp  WindowTitle.hpp
src/renderer/core/: RendererBootstrap.hpp  VulkanViewportShell.cpp  VulkanViewportShell.hpp
src/renderer/gsplat/: GsplatLayer.hpp  HighQualityGaussianScene.cpp  HighQualityGaussianScene.hpp
src/renderer/pointcloud/: Colormap.cpp  Colormap.hpp  PointCloudGpuDrivenSelection.cpp  PointCloudGpuDrivenSelection.hpp  PointCloudIpcloudCache.cpp  PointCloudIpcloudCache.hpp  PointCloudLayer.hpp  PointCloudLodHierarchy.cpp  PointCloudLodHierarchy.hpp  PointCloudPerformanceGovernor.cpp  PointCloudPerformanceGovernor.hpp  PointCloudPreviewState.cpp  PointCloudPreviewState.hpp  RaycastBvh.cpp  RaycastBvh.hpp
src/scene/: SceneCatalog.cpp  SceneCatalog.hpp
src/serialization/: ProjectDocument.cpp  ProjectDocument.hpp
src/style/: RenderParameterBinding.cpp  RenderParameterBinding.hpp
src/ui/: SidePanelState.hpp
src/water/: WaterFlow.cpp  WaterFlow.hpp
tests/: AssetDiscoveryTests.cpp  Test_Points.txt  water_flow_path_analysis_site3_fixture.json
